--- a/store/templates/payments/upload_slip.html
+++ b/store/templates/payments/upload_slip.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -32,3 +34,4 @@
 
 </body>
 </html>
+{% endblock %}
