--- a/store/templates/admin/admin_dashboard.html
+++ b/store/templates/admin/admin_dashboard.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -108,3 +110,4 @@
 
 </body>
 </html>
+{% endblock %}
