--- a/store/templates/cart/cart.html
+++ b/store/templates/cart/cart.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -8,16 +10,16 @@
 
     <!-- ✅ ใช้ Bootstrap เพื่อให้ดูสวยงาม -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/cart.css' %}"> <!-- ✅ เชื่อม CSS -->
+    <link rel="stylesheet" href="{% static 'styles/product-home1.css'%}"> <!-- ✅ เชื่อม CSS -->
 </head>
 <body>
 
     <!-- ✅ แถบเมนู -->
-    <header class="navbar navbar-expand-lg navbar-light bg-success text-white px-3">
+    <!-- <header class="navbar navbar-expand-lg navbar-light bg-success text-white px-3">
         <a class="navbar-brand text-white" href="{% url 'home' %}">🛒 ระบบ POS</a>
         <a href="{% url 'settings' %}" class="btn btn-light ms-auto">⚙️ ตั้งค่า</a>
         <a href="{% url 'cart_view' %}" class="btn btn-warning ms-2">🛒 ตะกร้าสินค้า</a>
-    </header>
+    </header> -->
 
     <div class="container mt-4">
         <h2 class="mb-4">🛒 ตะกร้าสินค้า</h2>
@@ -71,3 +73,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+{% endblock %}
