--- a/store/templates/dashboard.html
+++ b/store/templates/dashboard.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,3 +80,4 @@
     </div>
 </body>
 </html>
+{% endblock %}
