--- a/store/templates/login/login.html
+++ b/store/templates/login/login.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'styles/home.css' %}">
 {% block content %}
 <div class="container">
     <div class="logo">
