--- a/store/templates/orders/confirm_order.html
+++ b/store/templates/orders/confirm_order.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -6,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🛒 ยืนยันคำสั่งซื้อ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/confirm_order.css' %}"> <!-- ✅ เชื่อม CSS -->
+    <link rel="stylesheet" href="{% static 'styles/product-home1.css' %}"> <!-- ✅ เชื่อม CSS -->
 </head>
 <body>
 
@@ -57,3 +59,5 @@
 
 </body>
 </html>
+
+{% endblock %}
