--- a/store/templates/orders/order_detail.html
+++ b/store/templates/orders/order_detail.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
@@ -6,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>📦 รายละเอียดคำสั่งซื้อ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'styles/product-home1.css' %}">
 </head>
 <body>
 
@@ -62,3 +65,5 @@
 
 </body>
 </html>
+
+{% endblock %}
