--- a/store/templates/products/add_product.html
+++ b/store/templates/products/add_product.html
@@ -1,13 +1,15 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เพิ่มสินค้า</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/add_product.css' %}"> <!-- ✅ เชื่อม CSS -->
-    <link rel="stylesheet" href="{% static 'styles/add_product.css' %}">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'styles/add_product.css' %}"> ✅ เชื่อม CSS -->
+    <link rel="stylesheet" href="{% static 'styles/products.css' %}">
 </head>
 <body>
 
@@ -69,3 +71,5 @@
 
 </body>
 </html>
+
+{% endblock %}
