--- a/store/templates/products/edit_product.html
+++ b/store/templates/products/edit_product.html
@@ -1,11 +1,13 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>📝 แก้ไขสินค้า</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'styles/products.css' %}">
 </head>
 <body>
 
@@ -64,3 +66,5 @@
 
 </body>
 </html>
+
+{% endblock %}
