--- a/store/templates/products/product_detail.html
+++ b/store/templates/products/product_detail.html
@@ -1,10 +1,13 @@
+{% extends "base.html" %}
+{% load static %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="th">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>รายละเอียดสินค้า</title>
-    <link rel="stylesheet" href="/static/css/style.css">
+    <link rel="stylesheet" href="{% static 'styles/products.css' %}">
 </head>
 <body>
     <h2>{{ product.name }}</h2>
@@ -25,3 +28,4 @@
     <a href="{% url 'product_list' %}">ย้อนกลับ</a>
 </body>
 </html>
+{% endblock %}
