--- a/store/templates/products/product_list.html
+++ b/store/templates/products/product_list.html
@@ -1,4 +1,6 @@
+{% extends "base.html" %}
 {% load static %}
+{% block content %}
 
 <!DOCTYPE html>
 <html lang="th">
@@ -6,8 +8,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>📦 รายการสินค้า</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'styles/product_list.css' %}">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="{% static 'styles/products.css' %}">
 </head>
 <body>
 
@@ -82,3 +84,5 @@
 
 </body>
 </html>
+
+{% endblock %}
