--- a/store/templates/Dash1.html
+++ b/store/templates/Dash1.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+<!-- {% extends "base.html" %}
 
-{% load plotly_dash %}  <!-- Load the plotly_dash tag library -->
+{% load plotly_dash %}  
 {% load static %}
 
 {% block title %}Dash App{% endblock %}
@@ -10,7 +10,6 @@
     <title>Dash in Django</title>
     {% load plotly_dash %}
     {% plotly_header %}
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
     <link rel="stylesheet" href="{% static 'styles/dash.css' %}">
 </head>
 <div class="container">
@@ -27,4 +26,4 @@
         {% plotly_footer %}
     </div>
 </div>
-{% endblock %}
+{% endblock %} -->
