--- a/store/templates/Dash3.html
+++ b/store/templates/Dash3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Dash in Django</title>
@@ -16,4 +16,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
