--- a/store/templates/Dash2.html
+++ b/store/templates/Dash2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Dash in Django</title>
@@ -18,4 +18,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> -->
